# .dotfiles

./: .ai-rc  .bashrc  .commonrc  .gitattributes  .gitconfig  .gitignore  .gitmodules  .k8s-rc  .lmstudio-mcp.json  .stow-local-ignore  .tmux.conf  .zprofile  .zsh_profile  .zshrc  AGENTS.md  README.md  quick-push  scratch.md  scratchpad.md
.agent/lessons/: dotfiles.md
.bin/: csa-firefox-auth-bridge
.bin/quick-push/: .quick-push  quick-push.sh
.bin/term_scripts/: fzf_dev.sh  tmux_sessionizer.sh
.claude/: .mcp.json  CLAUDE.md  CLAUDE_PIPED_OLD.md  history.jsonl  mcp.json  settings.json  setup-personal-mcp.sh
.claude/agents/: benchmarker.md  code-architect.md  code-explorer.md  code-reviewer.md  compliance-counsel.md  deep-research-agent.md  kb-architect.md  kb-coordinator.md  kb-developer.md  kb-linear-implementer.md  kb-product-owner.md  kb-qa.md  kb-reviewer.md  kb-sprint-owner.md  linear-implementer.md  monitor.md  planner.md  release-captain.md  release-coordinator.md  (+3 more)
.config/: notes-sync.env.example  starship.toml  zoomus.conf
.cursor/: argv.json  mcp.json
.fonts/: .uuid  README.md
.githooks/: post-commit  pre-commit  pre-push  sensitive-tokens.txt
.local/src/agent-panel/: Cargo.toml  README.md
.local/src/agent-panel/src/: chooser.rs  fzf.rs  jsonl.rs  main.rs  procmap.rs  render.rs  session.rs  tmux.rs
.local/src/notes-cli/: Cargo.toml  README.md
.local/src/notes-cli/src/: archive.rs  backlog.rs  clickup.rs  comms.rs  config.rs  daily.rs  doctor.rs  focus.rs  focus_move.rs  focus_sweep.rs  inbox.rs  index.rs  logging.rs  main.rs  md.rs  meeting.rs  project_tasks.rs  projects.rs  summarize.rs  tags.rs  zettel.rs
.local/src/timebox/crates/timebox-cli/: Cargo.toml
.local/src/timebox/crates/timebox-cli/src/: config.rs  logging.rs  main.rs  notify.rs
.local/src/timebox/crates/timebox-core/: Cargo.toml
.local/src/timebox/crates/timebox-core/src/: dur.rs  event.rs  lib.rs  state.rs  stats.rs  store.rs
.serena/: serena_config.yml
.ssh/: README.md  config
.vnc/: README.md
ai/: .cursorrules  source_files.txt  target_dirs.txt
qmk_firmware/: foostan  keebio  kprepublic
(+1579 files in other folders)
