[package]
name = "agent-panel"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tmux chooser for running Claude/AI agents (fzf + tmux UI)"

[[bin]]
name = "agent-panel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
